@@ -815,9 +815,16 @@ public class SelectorTest {
         assertEquals("Two", els.text());
     }
 
-    @Test public void startswithBeginsWithSpace() {
-        Document doc = Jsoup.parse("<small><a href=\" mailto:abc@def.net\">(jdvp@fct.unl.pt)</a></small>");
+    @Test public void startsWithBeginsWithSpace() {
+        Document doc = Jsoup.parse("<small><a href=\" mailto:abc@def.net\">(abc@def.net)</a></small>");
         Elements els = doc.select("a[href^=' mailto']");
+
+        assertEquals(1, els.size());
+    }
+
+    @Test public void endsWithEndsWithSpaces() {
+        Document doc = Jsoup.parse("<small><a href=\" mailto:abc@def.net \">(abc@def.net)</a></small>");
+        Elements els = doc.select("a[href$='.net ']");
 
         assertEquals(1, els.size());
     }
